--- a/src/header.html
+++ b/src/header.html
@@ -10,7 +10,24 @@
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-<h1 class="page-header">你好，世界！</h1>
-
+<!--<div class="container">-->
+    <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">仓库管理系统</a>
+        </div>
+        <div>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        {{username}}<b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">退出系统</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+<!--</div>-->
 </body>
 </html>
