Finsh form processing.

--- a/src/html/in-form.html
+++ b/src/html/in-form.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<script id="in-form" type="text/x-handlebars-template">
+    <form action="http://127.0.0.1:3000/part/in" method="put" onsubmit="return false;">
+        <input name="id" value="564722cedffa711fb03a46dd">
+        <input name="value" value="10">
+        <button type="submit" class="submit-form">Submit</button>
+    </form>
+</script>
