--- a/src/header.html
+++ b/src/header.html
@@ -8,6 +8,8 @@
     <title>Bootstrap 101 Template</title>
 
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <script type="application/javascript" src="lib/jquery/jquery.min.js"></script>
+    <script type="application/javascript" src="app.js"></script>
 </head>
 <body>
 <div id="nav"></div>
