--- a/src/html/nav.html
+++ b/src/html/nav.html
@@ -4,7 +4,7 @@
     <div class="navbar-header">
         <a class="navbar-brand" href="#">仓库管理系统</a>
     </div>
-    <div>
+    <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
